# jacksonify

./: .gitignore  Cargo.toml
.github/workflows/: pages.yml
docs/: ad-lib-placement-design.md  mj-vocal-analysis.md
src/: beat.rs  gaps.rs  key.rs  lib.rs  placement.rs  structure.rs
www/: index.html
www/samples/: metadata.json
