[package]
name = "jacksonify"
version = "0.1.0"
edition = "2021"
description = "Audio key and beat detection in the browser via Rust + WASM"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
rustfft = "6.2"
console_error_panic_hook = "0.1"

[profile.release]
opt-level = "s"
lto = true
